fixing the layout and the spacing

--- a/front-end/src/tournament.css
+++ b/front-end/src/tournament.css
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: poppins;
-  src: url(./Poppins/Poppins-Bold.ttf);
+  src: url(./Poppins/Poppins-\.ttf);
 }
 
 .top_title {
@@ -28,12 +28,6 @@
 .container_all {
   overflow: hidden;
   max-height: 80vh;
-}
-
-
-.tor_cont
-{
-  max-height: 60vh;
 }
 
 .img_container {
@@ -131,4 +125,11 @@
   bottom:40rem; 
   border-right: 3px solid white;
   border-bottom: 3px solid white;
+}
+p
+{
+  font-size: x-small;
+  font-family: poppins;
+  color: rgba(255, 255, 255, 1);
+  -webkit-text-stroke: 1px rgba(199, 125, 255, 1);
 }
